# Var-Mod-Trash-Machina

./: .gitignore  LICENSE  README.md  build_exe.ps1  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
Ex Machina Randomizer/: design.py  main.py  options.py  randomizer.py
Ex Machina Randomizer/resources/: settings.yaml
resources/: localisation.yaml  settings.yaml
resources/manifests/: manifest_cp114.yaml  manifest_cr114.yaml  manifest_isl12cp.yaml  manifest_isl12cr.yaml  manifest_steam.yaml
resources/options/: options_cr114.yaml  options_isl12cr.yaml
src/: TODO.md  barnpc_randomizer.py  config.py  data.py  enviroment.py  errors.py  example.py  executable_randomizer.py  file_copier.py  file_randomizer.py  file_utils.py  gui.py  gui_info.py  landscape_randomizer.py  localisation.py  lua_randomizer.py  main.py  main_randomizer.py  models_randomizer.py  randomizer.py  randomizer_flet.py  text_randomizer.py  validation.py  validation_data.py  validation_utils.py  working_set_manager.py  yaml_operations.py  yaml_parser.py  yaml_schema.py  yaml_utils.py
src/config/: app_config.py  randomization_config.py
src/gui/: flet_window.py  gui.py  gui_info.py
src/helpers/: errors.py  file_utils.py  offsets_utils.py  paths_utils.py  yaml_utils.py
src/localisation/: localisation.py  localisation.yaml
src/randomizer/: barnpc_randomizer.py  executable_randomizer.py  file_randomizer.py  landscape_randomizer.py  lua_randomizer.py  models_randomizer.py  randomizer.py  text_randomizer.py
src/validation/: manifest_schema.py  validation.py  validation_data.py  (+1 more)
(+52 files in other folders)
