[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
pydantic = "^2.9.2"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
mypy = "^1.13.0"
Nuitka = "^2.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
